--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,4 +2,4 @@ include(CTest)
 
 add_executable(myTest test.cpp)
 
-add_test(NAME myTest COMMAND ${CMAKE_PROJECT_NAME})
+add_test(NAME myTest COMMAND myTest)
